fix: ol looks off on mobile

--- a/media/css/firefox/ios-summarizer.scss
+++ b/media/css/firefox/ios-summarizer.scss
@@ -8,6 +8,8 @@
 .ios-summarizer-use-steps ol {
   @include bidi(((margin-left, $layout-sm, margin-right, 0),));
   list-style-type: decimal;
+  list-style-position: inside;
+  line-height: 1.5;
 }
 
 .ios-summarizer-hero-background {
